2008-07-07  Andy Buckley  <andy@insectnation.org>

	* Added Doxygen "@brief" flags to analyses.

	* Added "RIVET_" namespacing to all header guards.

	* Merged Giulio Lenzi's isolation/vetoing/invmass projections and
	D0 2008 analysis.

2008-06-23  Jon Butterworth  <J.Butterworth@ucl.ac.uk>

	* Modified FastJet to fix ysplit and split and filter.

	* Modified ExampleTree to show how to call them.

2008-06-19  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added first version of the CDF_2008_DRELLYAN analysis described on
	  http://www-cdf.fnal.gov/physics/new/qcd/abstracts/UEinDY_08.html
	  There is a small difference between the analysis and this
	  implementation, but it's too small to be visible.
	  The fpythia-cdfdrellyan.params parameter file is for this analysis.

	* Added first version of the CDF_2008_MINBIAS analysis described on
	  http://www-cdf.fnal.gov/physics/new/qcd/abstracts/minbias_08.html
	  The .aida file is read from the plots on the web and will change.
	  I'm still discussing some open questions about the analysis with
	  the author.

2008-06-18  Jon Butterworth  <J.Butterworth@ucl.ac.uk>

	* Added First versions of splitJet and filterJet methods to
	fastjet.cc. Not yet tested, buyer beware.

2008-06-18  Andy Buckley  <andy@insectnation.org>

	* Added extra sorted Jets and Pseudojets methods to FastJets, and
	added ptmin argument to the JetAlg getJets() method, requiring a
	change to TrackJet.

2008-06-13  Andy Buckley  <andy@insectnation.org>

	* Fixed processing of "RG" parameters to ensure that invalid
	iterators are never used.

2008-06-10  Andy Buckley  <andy@insectnation.org>

	* Updated AIDA reference files, changing "/HepData" root path to
	"/REF". Still missing a couple of reference files due to upstream
	problems with the HepData records.

2008-06-09  Andy Buckley  <andy@insectnation.org>

	* rivetgun now handles termination signals (SIGTERM, SIGINT and
	SIGHUP) gracefully, finishing the event loop and finalising